--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "less-loader": "^5.0.0",
     "mint-ui": "^2.2.13",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
     "vue": "^2.5.13",
     "vue-loader": "^13.3.0",
+    "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.5"
