--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mint-ui": "^2.2.13",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
     "vue": "^2.5.13",
     "vue-loader": "^13.3.0",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.12.0",
