--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "url-loader": "^2.2.0",
     "vue": "^2.5.13",
     "vue-loader": "^13.3.0",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.5.13",
