--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.5.13",
+    "vuex": "^3.1.1",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.5"
   }
