--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --hot --port 4321 --open"
+    "dev": "webpack-dev-server --hot --port 3000 --open"
   },
   "keywords": [],
   "author": "",
@@ -35,6 +35,8 @@
     "vue-template-compiler": "^2.5.13",
     "vuex": "^3.1.1",
     "webpack": "^3.12.0",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^2.11.5"
-  }
+  },
+  "devDependencies": {}
 }
