--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --hot --open",
+    "dev": "webpack-dev-server --hot --open --port 3000 --host 127.0.0.1",
     "pub": "webpack --config webpack.publish.config.js"
   },
   "keywords": [],
